# Fukui_Net

./: .gitignore  HUGGINGFACE_SETUP.md  README.md  model_card.md  pyproject.toml  test_config.py  test_predictions.csv  tokenizer_config.json  upload_to_hf.py
fukui_net/: __init__.py  hf_integration.py
fukui_net/utils/: __init__.py  prepare.py
tests/: __init__.py  test_cli.py  test_hf_integration.py  test_model.py  test_predictor.py
tests/data/: predictions.csv
