[project]
name = "fukui-net"
version = "0.1.0"
description = "A neural network for predicting Fukui indices using Kernel-based Attention Networks (KAN) with Chebyshev graph convolutions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub>=0.35.0",
    "joblib>=1.5.2",
    "lightning>=2.5.5",
    "lion-pytorch>=0.2.3",
    "numpy<2.0",
    "pandas>=2.3.2",
    "rdkit-pypi>=2022.9.5",
    "rich>=14.1.0",
    "scikit-learn>=1.7.2",
    "torch>=2.8.0",
    "torch-geometric>=2.6.1",
    "torch-scatter>=2.1.2",
    "typer>=0.19.1",
]

[project.scripts]
fukui_net = "fukui_net.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["B011", "S101"]

[tool.ruff.lint.isort]
known-first-party = ["fukui_net"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.13.1",
]
